# catseq

./: .gitignore  AGENT.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMPILER_IMPLEMENTATION_PLAN.md  CONTEXT.md  FRAMEWORK_DESIGN.md  MORPHISM_DESIGN.md  MULTI_CHANNEL_HANDLING.md  NEW_FRAMWORK.md  OASM_CONFLICT_FIX.md  PACKAGE_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  RTMQ_vs_ARTIQ_for_QEC.md  RWG_IMPLEMENTATION_PLAN.md  TODO.md  UPGRADING.md  compatibility_test.py  compiler_implementation_plan2.md  compiler_implementation_plan3.md  demo_ttl_framework.py  memory.md  multi_channel_analysis.py  plan.md  pyproject.toml  setup.ps1  setup.sh  simple_ttl_demo.py  test_new_model.py  test_new_structure.py  tests.ipynb  timing_analysis.py  ttl_minimal.py
.github/workflows/: ci.yml  python-tests.yml
.serena/: .gitignore  project.yml
.serena/memories/: architecture.md  code_style.md  compiler_design.md  mlir_implementation_example.md  mlir_refactor_design.md  project_overview.md  rtmq_oasm_reference.md  suggested_commands.md  task_completion.md  xdsl_integration.md
benchmarks/: compile_transport.py  rydberg_transfer_pipeline.py
catseq/: DEVDOC.md  README.md  __init__.py  _native.pyi  abstractions.py  atomic.py  builder.py  control.py  debug.py  lanes.py  model.py  model_new.py  morphism.py  pending.py  program.py  protocols.py  setup.py  time_utils.py  types.py
catseq-rust/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_COMPILATION.md  PLAN.md  QUICKSTART.md  README.md  build.sh  catseq_rs.pyi  pyproject.toml  test.sh
catseq-rust/examples/: explore_api.py  program_arena_demo.py
catseq-rust/src/: arena.rs  compiler.rs  incremental.rs  lib.rs  path.rs
catseq-rust/src/program/: arena.rs  mod.rs  nodes.rs  values.rs
catseq-rust/tests/: test_catseq_rs.py  test_program_arena.py  test_v2_ttl.py
catseq/ast/: __init__.py  ast_to_ir.py  expressions.py  program_ast.py  variables.py
catseq/compilation/: __init__.py  compiler.py  execution.py  functions.py  mask_utils.py  native.py  pipeline.py  runtime.py  timing_analysis.py  types.py
catseq/core/: __init__.py  morphisms.py  objects.py
catseq/dialects/: __init__.py  program_dialect.py  program_utils.py
catseq/expr/: __init__.py  core.py  realize.py  types.py
catseq/hardware/: __init__.py  base.py  common.py  rsp.py  rwg.py  sync.py  ttl.py
catseq/morphism/: __init__.py  arena.py  compose.py  core.py  deferred.py  lower.py  views.py
catseq/morphisms/: common.py  rwg.py  ttl.py
catseq/oasm/: functions.py
catseq/oasm_extensions/: rwg.py  veri.py
catseq/states/: __init__.py  common.py  dac.py  rwg.py  ttl.py
catseq/targets/: __init__.py  rtmq_v2.toml
catseq/tests/: conftest.py  test_model.py
catseq/v2/: dsl.py  (+19 more)
doc/: 02_RTMQv2_RTLink.md  03_RTMQv2_StdCohNode.md  05_QCtrl_Master.md  06_QCtrl_RWG.md  compiler_notes.md
docs/: AST_MLIR_REFACTOR_PLAN.md  OASM_LIBRARY_EVALUATION.md  OASM_LINKING_DESIGN.md  TECHNICAL_REVIEW_OASM_DOCS.md  oasm_blackbox_quickstart.md  xdsl_program_integration_plan.md
examples/: README.md  analysis.py  compiled_result_access.py  compiler_demo.py  erasure_pulse_blackbox_example.py  hardware_map.py  oasm_blackbox_complete_example.py  rwg_initialize_demo.py  test.py  ttl_sequence_demo.py  visualization_demo.py
legacy/: README.md  test_core_system.py
oasm_extensions/: __init__.py  aa3_g32.py  da2_aa1_g8.py  da8_aa1_g8.py  rsp.py  rwg.py
rust/: Cargo.toml
rust/catseq-compiler/: Cargo.toml
rust/catseq-compiler/src/: compiler_thread.rs  lib.rs  response.rs
rust/catseq-core/: Cargo.toml
rust/catseq-core/src/: arena.rs  definitions.rs  exact_decimal.rs  lib.rs  morphism_arena.rs  native_arenas.rs  value_expr.rs
rust/catseq-core/tests/: arena_store.rs  morphism_arena.rs  specialization_cache.rs
rust/catseq-frontend/: Cargo.toml
rust/catseq-frontend/examples/: incremental_compile.rs
rust/catseq-frontend/src/: arena_lowering.rs  hir.rs  incremental.rs  intrinsics.rs  lib.rs  morphism_lowering.rs  names.rs  session.rs  source_hir.rs  typed.rs  validate.rs
rust/catseq-frontend/src/morphism_lowering/: normalized_value.rs  value_lowering.rs
rust/catseq-frontend/src/typed/: ast_util.rs  compile_attributes.rs  compile_values.rs  definition_analysis.rs  model.rs  resolution.rs  signatures.rs  validation.rs
rust/catseq-frontend/tests/: arena_lowering.rs  hir_lowering.rs  incremental_compilation.rs  name_resolution.rs  source_discovery.rs
rust/catseq-python/: Cargo.toml
rust/catseq-python/src/: bindings.rs  lib.rs  runtime.rs
rust/catseq-rtmq/: Cargo.toml
rust/catseq-rtmq/src/: download.rs  isa.rs  lib.rs  oasm_call_plan.rs
rust/catseq-rtmq/src/oasm_call_plan/: abi_cost.rs  arena_util.rs  atomic_lowering.rs  epochs.rs  event_lowering.rs  loop_lowering.rs  model.rs  plan_builder.rs  scheduler.rs  tests.rs  timing.rs  validate.rs  value_eval.rs
rust/catseq-rtmq/tests/: download_loader.rs  relative_link.rs  rtmq_instruction.rs
rust/catseq-runtime/: Cargo.toml
rust/catseq-runtime/src/: execution.rs  lib.rs  model.rs
rust/catseq-runtime/src/protocol/: mod.rs  rtlink.rs
rust/catseq-runtime/src/transport/: mod.rs  raw_socket.rs
rust/catseq-runtime/tests/: rtlink_parity.rs  runtime_contract.rs
rust/catseqc/: Cargo.toml
rust/catseqc/benches/: rydberg_transfer.rs
rust/catseqc/src/: main.rs
rust/catseqc/tests/: check_command.rs
rust/catseqc/tests/fixtures/: rydberg_bindings.json  rydberg_environment.json  rydberg_target.json
scripts/: benchmark_rust_vs_python.py  post_install.py  setup_platform.py
tests/: conftest.py  debug_compiler_output.py  debug_simple.py  helpers.py  minimal_bug_repro.py  test_builder.py  test_ci_configuration.py  test_compiler_example.py  test_device_types.py  test_model.py  test_morphism_timing.py  test_morphisms_ttl.py  test_multi_board_compiler.py  test_package_configuration.py  test_pending.py  test_program_dialect_basic.py  test_protocols.py  test_repository_boundaries.py  test_rust_backend.py  test_v4_model.py  wheel_smoke.py
tools/: capture_oasm_runtime_transcript.py  validate_chassis2_noop_download.py
(+227 files in other folders)
