[project]
name = "catseq"
version = "0.1.0"
description = "A Categorical Framework for Hardware Sequence Control"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable the standard pycodestyle (E) and pyflakes (F) rules.
select = ["E", "F"]
# Ignore E501 (line too long) and E701 (multiple statements on one line)
# for now to get a passing CI baseline.
ignore = ["E501", "E701"]

[tool.mypy]
# Allow mypy to work with the implicit namespace packages in this project.
# This will be less necessary once __init__.py files are added,
# but it is harmless to keep.
namespace_packages = true
