[project]
name = "catseq"
version = "0.2.0"
description = "A Categorical Framework for Hardware Sequence Control"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "oasm.dev",
    "ipykernel",
    "sipyco",
    "h5py",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy"
]



[tool.setuptools]
packages = ["catseq"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable the standard pycodestyle (E) and pyflakes (F) rules.
select = ["E", "F"]
# Ignore E501 (line too long) and E701 (multiple statements on one line)
# for now to get a passing CI baseline.
ignore = ["E501", "E701"]

[tool.mypy]
# Allow mypy to work with the implicit namespace packages in this project.
namespace_packages = true
# Exclude the temporary build directory created by pip/uv to avoid duplicate module errors.
exclude = ["build/"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest-mock>=3.14.1",
]
