[project]
name = "catseq"
version = "0.3.0.dev0"
description = "A Categorical Framework for Hardware Sequence Control"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "oasm @ git+https://git.opticaltweezer.eu.org/OT/oasm.git@33b6c2538509e70475b49de5bd5a13ef334d4387",
    "ipykernel",
    "h5py",
    "scipy",
    "matplotlib>=3.10.6",
    "dataclasses-json",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["catseq*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable the standard pycodestyle (E) and pyflakes (F) rules.
select = ["E", "F"]
# Ignore E501 (line too long) and E701 (multiple statements on one line)
# for now to get a passing CI baseline.
ignore = ["E501", "E701"]

[tool.mypy]
# Allow mypy to work with the implicit namespace packages in this project.
namespace_packages = true
# Exclude the temporary build directory created by pip/uv to avoid duplicate module errors.
exclude = ["build/"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest-mock>=3.14.1",
]


[tool.pyright]
include = [".venv/**/site-packages/oasm"]
exclude = [".git", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "off"   # 或者 "basic"
