[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "catseq-rust"
version = "0.1.0"
description = "Rust-accelerated backend for CatSeq"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["catseq_rs.pyi", "py.typed"]
