[package]
name = "catseq-frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "catseq_frontend"

[dependencies]
catseq-core.workspace = true
nac3ast.workspace = true
nac3parser.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
