[package]
name = "catseq-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
catseq-core.workspace = true
pyo3.workspace = true
