[package]
name = "catseq-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
catseq-compiler.workspace = true
catseq-runtime.workspace = true
pyo3 = { version = "0.24.2", features = ["extension-module"] }
