[package]
name = "catseq-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "catseq_runtime"

[dependencies]
catseq-rtmq.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dev-dependencies]
serde_json.workspace = true
