[package]
name = "catseqc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "catseqc"
path = "src/main.rs"
bench = false

[features]
rb1-bench = []

[dependencies]
catseq-core.workspace = true
catseq-frontend.workspace = true
catseq-rtmq.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "rydberg_transfer"
harness = false
required-features = ["rb1-bench"]
